Fixed navigation layout on small screen

--- a/assets/menus.css
+++ b/assets/menus.css
@@ -143,5 +143,16 @@ nav .sign {
 		width: 100%; 
 		float: none; 
 	}
+	/* Navigation */
+	nav {
+		padding: 70px 0px 0px 10px;
+	}
+	nav > ul {
+		padding-left: 0;
+		padding-right: 20px;
+	}
+	nav > ul > li > a {
+		padding: 8px 12px 10px 12px;
+	}
 
 }
